# irspt-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  TODO.md
irspt-api/: Cargo.toml  README.md
irspt-api/src/: irspt_api.rs  irspt_api_auth.rs  irspt_api_invoices.rs  lib.rs  web_driver_actions.rs
irspt-api/src/extensions/: mod.rs  web_driver_extensions.rs  web_element_extensions.rs
irspt-api/src/models/: issue_invoice_request.rs  mod.rs
irspt-cli/: Cargo.toml
irspt-cli/src/: main.rs  prompt.rs  validators.rs
irspt-contracts/: Cargo.toml
irspt-contracts/src/: lib.rs
irspt-contracts/src/enums/: instance_state.rs  mod.rs
irspt-contracts/src/models/: invoice_template.rs  issue_invoice_request.rs  mod.rs
irspt-contracts/src/traits/: invoice_template_store.rs  irspt_api_auth.rs  irspt_api_invoices.rs  mod.rs
irspt-core/: Cargo.toml  README.md
irspt-core/src/: lib.rs
irspt-core/src/api/: constants.rs  irspt_api.rs  irspt_api_auth.rs  irspt_api_invoices.rs  mod.rs
irspt-core/src/api/extensions/: mod.rs  web_driver_extensions.rs  web_element_extensions.rs
irspt-core/src/enums/: instance_state.rs  webdriver_type.rs
irspt-core/src/infra/: byte_serialization.rs  invoice_template_sled_store.rs  mod.rs  webdriver_manager.rs
irspt-core/src/models/: issue_invoice_request.rs  mod.rs  reference_data_dto.rs  template.rs
irspt-core/src/services/: invoices_service.rs  mod.rs  template_service.rs
irspt-core/src/traits/: db_wrapper.rs  invoice_template_store.rs  invoices_service.rs  irspt_api_auth.rs  irspt_api_invoices.rs  mod.rs  webdriver_manager.rs
irspt-infra/: Cargo.toml  README.md
irspt-infra/src/: byte_serialization.rs  invoice_template_sled_store.rs  lib.rs  sled_db.rs  webdriver_manager.rs
