[package]
name = "irspt-cli"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
child-stdout-off = []
headless-webdriver = []
issue-invoice = []
issue-invoice-final-timout = []

default = [
  "child-stdout-off",
  "headless-webdriver",
  "issue-invoice",
  #"issue-invoice-final-timout"
]

[dependencies]
irspt-core = { path = "../irspt-core/" }
anyhow = "1.0"
chrono = "0.4"
tokio = "1"
inquire = { version = "0.2.1", features = ["date"] }
