[package]
name = "irspt-cli"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-mode = []
final-timout = []

default = [
  "dev-mode",
  "final-timout"
]

[dependencies]
irspt-core = { path = "../irspt-core/" }
anyhow = "1.0"
chrono = "0.4"
tokio = "1"
inquire = { version = "0.2.1", features = ["date"] }
