[package]
name = "irspt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
async-trait = "0.1"
sysinfo = "0.27.2"
tokio = "1.20.3"
thirtyfour = "0.31"
rkyv = { version = "0.7", features = ["alloc", "validation"] }
bytecheck = "0.6"
sled = "0.34"
