[package]
name = "irspt-infra"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irspt-contracts = { path = "../irspt-contracts/" }
anyhow = "1.0"
async-trait = "0.1"
rkyv = { version = "0.7", features = ["alloc", "validation"] }
bytecheck = "0.6"
sled = "0.34"
